--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -9,6 +9,7 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-EXPOSE 5050
+EXPOSE 5000
 
-CMD flask run -h 0.0.0.0 -p 5050
+CMD flask run -h 0.0.0.0
+
