--- a/osrm/Dockerfile
+++ b/osrm/Dockerfile
@@ -1,17 +1,21 @@
 FROM osrm/osrm-backend:v5.22.0
 
-ARG map_url=https://download.geofabrik.de/north-america/us/district-of-columbia-latest.osm.pbf
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends wget ca-certificates osmium-tool 
 
 RUN mkdir -p /data
 
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends wget ca-certificates 
+WORKDIR /data
 
-RUN wget -O /data/map.osm.pbf $map_url 
+COPY urls.txt .
 
-RUN /usr/local/bin/osrm-extract -p /opt/car.lua /data/map.osm.pbf && \
-    /usr/local/bin/osrm-partition /data/map.osrm && \
-    /usr/local/bin/osrm-customize /data/map.osrm
+RUN wget -i urls.txt
+
+RUN find -name '*.osm.pbf' | xargs osmium merge -o map.osm.pbf 
+
+RUN /usr/local/bin/osrm-extract -p /opt/car.lua map.osm.pbf && \
+    /usr/local/bin/osrm-partition map.osrm && \
+    /usr/local/bin/osrm-customize map.osrm
 
 EXPOSE 5000
 
