--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -9,5 +9,5 @@ COPY src/ .
 
 EXPOSE 5000
 
-CMD flask run --host=0.0.0.0 --port=5000
+CMD gunicorn --bind=0.0.0.0:5000 --workers=4 --access-logfile=- app:app
 
